--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col-12 text-center">
-      <h1>App Component</h1>
+      <app-recipe></app-recipe>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
