--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,3 +1,7 @@
 <div class="row">
-  <div class="col-12 bg-primary text-center">HEADER</div>
+  <div class="col-12 bg-primary bg-opacity-50 text-center p-3">
+    <h1 class="display-5">
+      HEADER
+    </h1>
+  </div>
 </div>
