--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -1,7 +1,16 @@
-<div class="row">
-  <div class="col-12 bg-primary bg-opacity-50 text-center p-3">
-    <h1 class="display-5">
-      HEADER
-    </h1>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <ul class="nav navbar-nav">
+      <li class="nav-item"><a class="nav-link active" href="#">My Home Organizer</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Recipe Book</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Shopping List</a></li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Actions</a>
+        <ul class="dropdown-menu">
+          <li><a href="#" class="dropdown-item">Fetch</a></li>
+          <li><a href="#" class="dropdown-item">Save</a></li>
+        </ul>
+      </li>
+    </ul>
   </div>
-</div>
+</nav>
