--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container">
+<div class="container p-3">
   <div class="row">
     <div class="col-12 text-center">
       <app-recipe></app-recipe>
