--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,10 @@
 <div class="container p-3">
   <div class="row">
     <div class="col-12 text-center">
+      <p class="display-3">Recipes</p>
       <app-recipe></app-recipe>
+      <hr>
+      <p class="display-3">Shopping List</p>
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
