--- a/src/app/domain/recipe-book/ui/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe-detail/recipe-detail.component.html
@@ -1,1 +1,34 @@
-<p>recipe-detail works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <img class="img-fluid" src="" alt="">
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <h1>Recipe Name</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      <div class="btn-group">
+        <button class="btn btn-primary dropdown-toggle">Manage recipe</button>
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item">To Shopping List</a></li>
+          <li><a class="dropdown-item">Edit Recipe</a></li>
+          <li><a class="dropdown-item">Delete Recipe</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      Description
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-12">
+      Ingredients
+    </div>
+  </div>
+</div>
