--- a/src/app/domain/recipe-book/ui/recipe/recipe-detail/recipe-detail.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe-detail/recipe-detail.component.html
@@ -11,8 +11,8 @@
   </div>
   <div class="row">
     <div class="col-12">
-      <div class="btn-group">
-        <button class="btn btn-primary dropdown-toggle">Manage recipe</button>
+      <div class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">Manage recipe</button>
         <ul class="dropdown-menu">
           <li><a class="dropdown-item">To Shopping List</a></li>
           <li><a class="dropdown-item">Edit Recipe</a></li>
