--- a/src/app/domain/shopping-list/ui/shopping-list/shopping-list.component.html
+++ b/src/app/domain/shopping-list/ui/shopping-list/shopping-list.component.html
@@ -1,7 +1,13 @@
-<div class="row">
-  <div class="col-xs-10">
-    <app-shopping-list-edit></app-shopping-list-edit>
-    <hr>
-    <p>list</p>
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      <app-shopping-list-edit></app-shopping-list-edit>
+      <hr>
+      <ul class="list-group">
+        <a class="list-group-item" style="cursor: pointer" *ngFor="let ingredient of ingredients">
+          {{ ingredient.name + ' x ' + ingredient.amount }}
+        </a>
+      </ul>
+    </div>
   </div>
 </div>
