--- a/src/app/domain/shopping-list/ui/shopping-list/shopping-list.component.html
+++ b/src/app/domain/shopping-list/ui/shopping-list/shopping-list.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <p class="display-3">Shopping List</p>
   <div class="row">
     <div class="col-12">
       <app-shopping-list-edit></app-shopping-list-edit>
