--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,9 @@
-<app-header></app-header>
+<app-header (recipePageSelected)="onRecipePageSelected()" (shoppingListPageSelected)="onShoppingListPageSelected()"></app-header>
 <div class="container p-3">
   <div class="row">
     <div class="col-12 text-center">
-      <p class="display-3">Recipes</p>
-      <app-recipe></app-recipe>
-      <hr>
-      <p class="display-3">Shopping List</p>
-      <app-shopping-list></app-shopping-list>
+      <app-recipe  *ngIf="recipePageSelected"></app-recipe>
+      <app-shopping-list *ngIf="shoppingListPageSelected"></app-shopping-list>
     </div>
   </div>
 </div>
