--- a/src/app/domain/recipe-book/ui/recipe/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe-list/recipe-item/recipe-item.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" style="cursor: pointer">
   <div class="row p-3">
     <div class="col-5">
       <img class="rounded img-thumbnail" [src]="recipe.imagePath" alt="" style="max-width: 130px; max-height: 130px">
