--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -2,8 +2,8 @@
   <div class="container-fluid">
     <ul class="nav navbar-nav">
       <li class="nav-item"><a class="nav-link active" href="#">My Home Organizer</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Recipe Book</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Shopping List</a></li>
+      <li class="nav-item"><a class="nav-link" href="#" (click)="onRecipeClick()">Recipe Book</a></li>
+      <li class="nav-item"><a class="nav-link" href="#" (click)="onShoppingListClick()">Shopping List</a></li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Actions</a>
         <ul class="dropdown-menu">
