--- a/src/app/domain/recipe-book/ui/recipe/recipe.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe.component.html
@@ -1,13 +1,15 @@
 <div class="container">
-
-  <p class="display-3">Recipes</p>
-
+  <p class="display-3 text-center">Recipes</p>
+  <hr>
   <div class="row">
     <div class="col-md-5">
-      <app-recipe-list></app-recipe-list>
+      <app-recipe-list (recipeSelected)="onRecipeSelected($event)"></app-recipe-list>
     </div>
     <div class="col-md-7">
-      <app-recipe-detail></app-recipe-detail>
+      <app-recipe-detail *ngIf="selectedRecipe else notSelected" [recipe]="selectedRecipe"></app-recipe-detail>
+      <ng-template #notSelected>
+        <h2>Select a recipe to view details</h2>
+      </ng-template>
     </div>
   </div>
 </div>
