--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <app-header (recipePageSelected)="onRecipePageSelected()" (shoppingListPageSelected)="onShoppingListPageSelected()"></app-header>
 <div class="container p-3">
   <div class="row">
-    <div class="col-12 text-center">
+    <div class="col-12">
       <app-recipe  *ngIf="recipePageSelected"></app-recipe>
       <app-shopping-list *ngIf="shoppingListPageSelected"></app-shopping-list>
     </div>
