--- a/src/app/domain/shopping-list/ui/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/domain/shopping-list/ui/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -4,16 +4,16 @@
       <div class="row mb-2">
         <div class="col-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" id="name" class="form-control" #nameInput>
         </div>
         <div class="col-2">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <input type="number" id="amount" class="form-control" #amountInput>
         </div>
       </div>
       <div class="row">
         <div class="col-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" (click)="onAddIngredient()">Add</button>
           <button class="btn btn-danger m-2" type="button">Delete</button>
           <button class="btn btn-secondary" type="button">Clear</button>
         </div>
