used attribute directive to toggle dropdowns manually

--- a/src/app/shared/ui/header/header.component.html
+++ b/src/app/shared/ui/header/header.component.html
@@ -4,8 +4,8 @@
       <li class="nav-item"><a class="nav-link active" href="#">My Home Organizer</a></li>
       <li class="nav-item"><a class="nav-link" href="#" (click)="onRecipeClick()">Recipe Book</a></li>
       <li class="nav-item"><a class="nav-link" href="#" (click)="onShoppingListClick()">Shopping List</a></li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Actions</a>
+      <li class="nav-item dropdown" appDropdown>
+        <a class="nav-link dropdown-toggle" href="#" role="button">Actions</a>
         <ul class="dropdown-menu">
           <li><a href="#" class="dropdown-item">Fetch</a></li>
           <li><a href="#" class="dropdown-item">Save</a></li>
