Used services to clean up passing data between components

--- a/src/app/domain/recipe-book/ui/recipe/recipe.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe.component.html
@@ -3,13 +3,10 @@
   <hr>
   <div class="row">
     <div class="col-md-5">
-      <app-recipe-list (recipeSelected)="onRecipeSelected($event)"></app-recipe-list>
+      <app-recipe-list />
     </div>
     <div class="col-md-7">
-      <app-recipe-detail *ngIf="selectedRecipe else notSelected" [recipe]="selectedRecipe"></app-recipe-detail>
-      <ng-template #notSelected>
-        <h2>Select a recipe to view details</h2>
-      </ng-template>
+      <app-recipe-detail />
     </div>
   </div>
 </div>
