--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<app-header (recipePageSelected)="onRecipePageSelected()" (shoppingListPageSelected)="onShoppingListPageSelected()"></app-header>
+<app-header></app-header>
 <div class="container p-3">
   <div class="row">
     <div class="col-12">
-      <app-recipe  *ngIf="recipePageSelected"></app-recipe>
-      <app-shopping-list *ngIf="shoppingListPageSelected"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
