--- a/src/app/domain/recipe-book/ui/recipe/recipe-list/recipe-list.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe-list/recipe-list.component.html
@@ -1,10 +1,15 @@
 <div class="row">
   <div class="col-xs-12 p-2">
-    <button class="btn btn-success w-100">New recipe</button>
+    <button class="btn btn-success w-100" routerLink="/recipes/new">New recipe</button>
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-      <app-recipe-item *ngFor="let recipe of recipes; index as i" [recipe]="recipe" (click)="onRecipeClick(i)"></app-recipe-item>
+      <app-recipe-item *ngFor="let recipe of recipes; index as i"
+                       [recipe]="recipe"
+                       [routerLink]="[recipe.id, 'details']"
+                       [relativeTo]="route"
+      >
+      </app-recipe-item>
   </div>
 </div>
