--- a/src/app/domain/shopping-list/ui/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/src/app/domain/shopping-list/ui/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="col-12">
-    <form>
+    <form #formRef="ngForm">
       <div class="row mb-2">
         <div class="col-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" #nameInput>
+          <input type="text" id="name" name="name" class="form-control" ngModel>
         </div>
         <div class="col-2">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control" #amountInput>
+          <input type="number" id="amount" name="amount" class="form-control" ngModel>
         </div>
       </div>
       <div class="row">
