--- a/src/app/domain/recipe-book/ui/recipe/recipe-edit/recipe-edit.component.html
+++ b/src/app/domain/recipe-book/ui/recipe/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,58 @@
-<h1>recipe edit works! EditMode: {{editMode}}</h1>
+<div class="container">
+  <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+    <h5>Details</h5>
+    <div class="form-group">
+      <label for="name">Recipe Name</label>
+      <input id="name" type="text" class="form-control" formControlName="name" />
+      <p class="text-danger" *ngIf="recipeForm.get('name').touched && recipeForm.get('name').hasError('required')">Required</p>
+    </div>
+    <br>
+    <div class="form-group">
+      <label for="description">Description</label>
+      <textarea rows="6" id="description" type="text" class="form-control" formControlName="description"></textarea>
+    </div>
+    <br>
+    <div class="form-group">
+      <label for="imagePath">Image URL</label>
+      <input id="imagePath" type="text" class="form-control" formControlName="imagePath" />
+      <p class="text-danger" *ngIf="recipeForm.get('imagePath').touched && recipeForm.get('imagePath').hasError('required')">Required</p>
+      <br>
+      <p>Preview</p>
+      <img [src]="recipeForm.get('imagePath').value" class="img-fluid form-control" style="max-width: 100px; max-height: 100px" alt="preview">
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-10">
+        <h5>Ingredients</h5>
+      </div>
+      <div class="col-2">
+        <button class="btn btn-dark" type="button" (click)="onAddIngredient()">+</button>
+      </div>
+    </div>
+    <br>
+    <div formArrayName="ingredients">
+      <div class="row" [formGroupName]="i" *ngFor="let ingCtrl of getIngredientControls(); let i = index">
+        <div class="form-group col-8">
+          <label for="ingredientName">Ingredient name</label>
+          <input id="ingredientName" type="text" class="form-control" formControlName="name" />
+          <p class="text-danger" *ngIf="ingCtrl.get('name').touched && ingCtrl.get('name').hasError('required')">Required</p>
+        </div>
+        <div class="form-group col-2">
+          <label for="ingredientQty">Quantity</label>
+          <input id="ingredientQty" type="number" class="form-control" formControlName="amount" />
+          <p class="text-danger" *ngIf="ingCtrl.get('amount').touched && ingCtrl.get('amount').hasError('required')">Required</p>
+          <p class="text-danger" *ngIf="ingCtrl.get('amount').touched && ingCtrl.get('amount').hasError('min')">Min 1</p>
+        </div>
+        <div class="form-group col-2">
+          <button class="btn btn-danger mt-4" (click)="onRemoveIngredient(i)">x</button>
+        </div>
+      </div>
+    </div>
+    <br>
+    <div class="form-group">
+      <button class="btn btn-success m-1" type="submit" [disabled]="!recipeForm.valid">Confirm</button>
+      <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
+    </div>
+    <br>
+  </form>
+</div>
